Header modified in header branch

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div class="header">
-      <h1>My Website</h1>
+      <h1>My Website is copied in header branch</h1>
       <p>A <b>responsive</b> website created by me.</p>
     </div>
 
